tests/base/parser/bad/address_duplicate_field.scilla
scilla_version 0

contract DuplicateField ()

procedure test
  (
    a :
      ByStr20 with contract
        field a : ByStr20 with end,
        field b : Map (ByStr20 with end) Bool,
        field b : Map (ByStr20 with end) Bool
      end
  )

end
